@@ -1,0 +1,32 @@
+#! @BASH@
+
+# -*-sh-*-
+# Time-stamp: <02/03/31 18:40:37 smulloni>
+
+########################################################################
+#  
+#  Copyright (C) 2002 Jacob Smullyan (smulloni@smullyan.org)
+#  
+#      This program is free software; you can redistribute it and/or modify
+#      it under the terms of the GNU General Public License as published by
+#      the Free Software Foundation; either version 2 of the License, or
+#      (at your option) any later version.
+#  
+#      This program is distributed in the hope that it will be useful,
+#      but WITHOUT ANY WARRANTY; without even the implied warranty of
+#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#      GNU General Public License for more details.
+#  
+#      You should have received a copy of the GNU General Public License
+#      along with this program; if not, write to the Free Software
+#      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
+#   
+# This script starts the product wizard (requires Tkinter).
+# $Id$
+########################################################################
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+bindir=@bindir@
+
+@bindir@/swpython -e "import product.productwiz as P; P.main()" &
